--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@ body {
   background-image: url(../image/cloudsBack.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  height: 100%;
   margin-top: 100px;
   opacity: 85%;
 }
